--- a/Course_notes_latex/Climate_dynamics_course_notes.tex
+++ b/Course_notes_latex/Climate_dynamics_course_notes.tex
@@ -87,35 +87,58 @@
 \maketitle
 \tableofcontents
 
-%\frontmatter
-%\chapter{Preface}
+\frontmatter
+\chapter{Preface}
+Let us take a look at a planet from space -- and -- imagine we let time pass relatively quickly. From this perspective we can observe a system in approximate stationarity; something which we usually call equilibrium. This is not to be mistaken for a strict thermodynamical equilibrium, wherein, as you may have learnt in other courses, the system is characterised by a single well-defined temperature, but rather an approximate equilibrium between radiative energy received from the star around which our planet of interest is circulating (provided it does have a star), and the thermal energy that the planet is radiating to space. How does the planet come into equilibrium, and is there only one equilibrium? How does the equilibrium change if the star changes it's irradiance, or the planets orbit is altered? How does the equilibrium of the planet depend on properties of the planet? To begin to answer these questions we will have to dig into the processes that determine the energy balance, but the starting point will be our somewhat abstract perspective from space and time.
 
+Usually we think of the climate as something that is static, we think of averages in time -- traditionally taken to be 30 years. So why discuss the dynamics of something that is static? The climate is varying on timescales as short as we choose to define them up to those of the existence of the planet (Figure \ref{fig:Paleo_temperature_timeseries}). These variations were either due to external factors, such as the sun, or  the composition of the atmosphere changing due to biogeochemical processes, or internal variability. Much of this can be described by simple dynamical equations, as the dynamics of climate. A related and interesting field describes the dynamics of the atmosphere- and ocean circulations and the biogeochemical cycles. 
+
+\vspace{1.0 cm}
+\noindent
+{\bf \LARGE Scope of the course}
+\\
+\\
+\noindent In the Climate Dynamics course I hope to bring you close to the forefront of current knowledge in climate dynamics, and ideally to inspire you to ask interesting questions on your own. Beyond this ideal, I hope to provide you with a solid basis for appreciating the stability of Earth's climate, and how and why we think it has, and is, changing. You will learn about forcing, feedback mechanisms and climate sensitivity, about the timescales involved in the climate system, and I will have a special focus on instrumental record warming. 
+
+The course is theoretical in the sense that we will be working with abstraction: simple models that explain some aspect of the system in a distilled way, either ignoring a number of factors or condensing them into simpler formulations. We will work both analytically and with simple computational models. 
+
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=17 cm]{../external_figures/Paleo_temperature_timeseries}
+\end{center}
+\caption{ Concatenation of various proxies of temperature from the past for illustration purposes. Note the logarithmic time-axis. Modified from Glen Fergus. } 
+\label{fig:Paleo_temperature_timeseries}
+\end{figure}
 
 \mainmatter
 %---------------------------------------------------------------------
 %---------------------------------------------------------------------
 \chapter{Essentials}
 \label{chapter:essentials}
-Let us take a look at a planet from space -- and -- imagine we let time pass relatively quickly. From this perspective we can observe a system in approximate stationarity; something which we usually call equilibrium. This is not to be mistaken for a strict thermodynamical equilibrium, wherein, as you may have learnt in other courses, the system is characterised by a single well-defined temperature, but rather an approximate equilibrium between radiative energy received from the star around which our planet of interest is circulating (provided it does have a star), and the thermal energy that the planet is radiating to space. How does the planet come into equilibrium, and is there only one equilibrium? How does the equilibrium change if the star changes it's irradiance, or the planets orbit is altered? How does the equilibrium of the planet depend on properties of the planet? To begin to answer these questions we will have to dig into the processes that determine the energy balance, but the starting point will be our somewhat abstract perspective from space and time.
-
-Usually we think of the climate as something that is static, we think of averages in time -- traditionally taken to be 30 years. So why discuss the dynamics of something that is static? The climate is varying on timescales as short as we choose to define them up to those of the existence of the planet. These variations were either due to external factors, such as the sun, or  the composition of the atmosphere changing due to biogeochemical processes, or internal variability. Much of this can be described by simple dynamical equations, as the dynamics of climate. A related and interesting field describes the dynamics of the atmosphere- and ocean circulations and the biogeochemical cycles. 
+Here I go over some of the basics of Earth's climatology, it's radiative properties and the energetic flows. This chapter is meant to 
 
 
-\section{Scope of the course}
-In the Climate Dynamics course I hope to bring you close to the forefront of current knowledge in climate dynamics, and ideally to inspire you to ask interesting questions on your own. Beyond this ideal, I hope to provide you with a solid basis for appreciating the stability of Earth's climate, and how and why we think it has, and is, changing. You will learn about forcing, feedback mechanisms and climate sensitivity, about the timescales involved in the climate system, and I will have a special focus on instrumental record warming. 
-
-The course is theoretical in the sense that we will be working with abstraction: simple models that explain some aspect of the system in a distilled way, either ignoring a number of factors or condensing them into simpler formulations. We will both work analytically and with simple computational models. 
 
 
 \section{Temperature of the Earth and its atmosphere}
+From basic thermodynamics we have learned that an isolated system has a well-defined temperature when it is in a thermodynamic equilibrium wherein there are only random brownian transfer of energy and no net fluxes exist. The Earth is very far from thermodynamic equilibrium, and instead about 120 Petawatt (PW: $10^{15}$W) are received from the sun and approximately the same amount is radiated to back to space in the form of infrared radiation. In this case it makes sense to choose a more practical definition of Earth's temperature, for instance that which is needed temperature needed to achieve equilibrium: the warmer it is the more infrared radiation it will radiate to space. This is sometimes referred to as the Earth's radiation temperature at thermal equilibrium.
 
 
+Energy flows
 
-Thermodynamical versus Thermal equilibrium
+\begin{figure}
+\begin{center}
+\includegraphics[width=12 cm]{../external_figures/HadCRUT_absolute_timmean.pdf}
+\end{center}
+\caption{ Observed annual mean near-surface temperature from HadCRUT. } 
+\label{fig:HadCRUT_temperature_map}
+\end{figure}
+
+Partly because the sunlight is not distributed evenly over the Earth's surface it exhibits wildly varying temperatures near the surface with extremes from about -90$^\circ$C to +60$^\circ$C. Even in the annual longterm mean the coldest and warmest places differ by nearly 90 degrees (Figure \ref{fig:HadCRUT_temperature_map}). As we will see below, this sets up large energy flows in the atmosphere and oceans from warmer to colder regions. Nevertheless, we will often use a conceptual global mean surface temperature; today this is about 15$^\circ$C.
 
 Temperature profile, focus on troposphere
 
-Earth's past climates
 
 \section{Radiative properties}
 
@@ -123,19 +146,17 @@ Spectra
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=17 cm]{GW_Petty_IRIS_Tropical_Western_Pacific.png}
+\includegraphics[width=17 cm]{../external_figures/GW_Petty_IRIS_Tropical_Western_Pacific.png}
 \end{center}
 \caption{ Classical radiance spectrum measured by the infrared interferometer spectrometer (IRIS) for measuring the emission spectra of the earth/atmosphere system aboard the Nimbus-4 satellite. The instrument is limited to the range 400 to 1600 cm$^{-1}$, and outside simplistic extrapolations are made. The measurements were made in the 1970's and are restricted to clear sky scenes. Dashed lines show idealized black body spectra. Blue shading illustrates the effect of carbon dioxide (CO$_2$). The other dip at 1000-1100 cm$^{-1}$ is due to ozone (O$_3$), and the flanks (less than 600 and more than 1200 cm$^{-1}$) are dominated by vapor vapor (H$_2$O). } 
 \label{fig:radiation_spectrum}
 \end{figure}
 
-Energy flows
-
 Cooling rates (Petty 2006)
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=8 cm]{atmospheric-radiation-13c-heating-rates-tropical-each-h2o-co2-o3.png}
+\includegraphics[width=8 cm]{../external_figures/atmospheric-radiation-13c-heating-rates-tropical-each-h2o-co2-o3.png}
 \end{center}
 \caption{ Longwave heating rates due to individual greenhouse gases calculated for a clear-sky tropical atmosphere.  } 
 \label{fig:radiative_cooling}
