--- a/Course_notes_latex/bibliography.bib
+++ b/Course_notes_latex/bibliography.bib
@@ -21,6 +21,19 @@ issn="1573-1480",
 doi="10.1007/s10584-008-9413-1"
 }
 
+@Article{Stevens2012,
+author={{Stevens, B and Schwartz, S E}},
+title={{Observing and Modeling Earth's Energy Flows}},
+journal={Surveys in Geophysics},
+year={2012},
+volume={33},
+number={3},
+pages={779--816},
+issn={1573-0956},
+doi={10.1007/s10712-012-9184-0},
+url={http://dx.doi.org/10.1007/s10712-012-9184-0}
+}
+
 
 
 @article{Gregory:2016,
