Figures and text, finalized chapter 2, now including text

--- a/Course_notes_latex/bibliography.bib
+++ b/Course_notes_latex/bibliography.bib
@@ -1,6 +1,45 @@
 %% Created using Papers on Thu, 10 Nov 2016.
 %% http://papersapp.com/papers/
 
+@article{Pierrehumbert2004,
+author = {Pierrehumbert, Raymond T.},
+title = {Warming the world},
+journal = {Nature},
+volume = {432},
+pages = {671},
+doi = {10.1038/432677a},
+year = {2004},
+}
+
+
+@article{Manabe1964,
+author = {Manabe and Strickler},
+title = {Thermal Equilibrium of the Atmosphere with a Convective Adjustment},
+journal = {Journal of the Atmospheric Sciences},
+volume = {21},
+number = {4},
+pages = {361-385},
+year = {1964},
+doi = {10.1175/1520-0469},
+}
+
+@article {Hartmann2002,
+author = {Hartmann, Dennis L. and Larson, Kristin},
+title = {An important constraint on tropical cloud - climate feedback},
+journal = {Geophysical Research Letters},
+volume = {29},
+number = {20},
+issn = {1944-8007},
+url = {http://dx.doi.org/10.1029/2002GL015835},
+doi = {10.1029/2002GL015835},
+pages = {12-1--12-4},
+keywords = {Climate dynamics, Meteorology and Atmospheric Dynamics: Convective processes, Meteorology and Atmospheric Dynamics: Precipitation, Meteorology and Atmospheric Dynamics: Radiative processes, Meteorology and Atmospheric Dynamics: Tropical meteorology},
+year = {2002},
+note = {1951},
+}
+
+
+
 @article{Armour:ZgX4PHn9,
 author = {Armour, K C},
 title = {{Energy budget constraints on climate sensitivity in light of inconstant climate feedbacks}},
