--- a/Course_notes_latex/Climate_dynamics_course_notes.tex
+++ b/Course_notes_latex/Climate_dynamics_course_notes.tex
@@ -407,10 +407,14 @@ Do this by modifying Equation \ref{eq:black_body_energy_balance} replacing $\sig
 Derive Equation \ref{eq:ntwo} for a two-layer atmosphere in the same way as done for the case for the single-layer atmosphere.
 \end{exercise}
 
+\begin{exercise}
+Make sure you have access to a computer with Python, and follow the instructions on the handed out sheet.
+\end{exercise}
+
 }
 
 %---------------------------------------------------------------------
-\chapter{Stability to small perturbations}
+\chapter{Response to small perturbations}
 
 Up until now we considered climates that were stationary, at rest between the absorbed solar radiation and the emitted infrared radiation. We call this a stationary state or a fix-point. But what happens if the system is starting a bit away from that stationary state? Or what happens if we take a system in a stationary state and somehow force it in a way that causes an energy imbalance to occur? This naturally leads us to develop the concepts of radiative forcing, climate change feedbacks and a resulting equilibrium climate sensitivity.
 In this chapter we shall assume the perturbations are small such that we can linearize the system.  A surprisingly large part of the discussion around climate change is actually limited to this first-order linear regime and so it makes sense to spend some time on it. In a later chapter we shall explore systems wherein linearity can no longer be assumed and the associated concepts begin to fall apart.
@@ -425,30 +429,136 @@ In this chapter we shall assume the perturbations are small such that we can lin
 
 
 \section{Climate stability}
-In one perspective the Earth's climate has varied in rich ways in the past, in another perspective it has been remarkably stable (Figure \ref{fig:Paleo_temperature_timeseries}). The past 6.000 years we have had nearly steady temperatures, a period called the Holocene. These relatively mild conditions, wherein modern human civilization developed, have been rare in the past 1.000.000 years wherein the climate has cycled between longer colder glacial interrupted by short interglacials. Before that the Earth was warmer than it is today. For instance during Pliocene CO$_2$ concentrations were close to what they are today, about 400 ppm, and temperatures higher by 2-3 K. Much earlier, during the Eocene temperatures were much warmer, maybe 10-15 K. These differences on the one hand translated into substantially different conditions for life to unfold on the planet. On the other hand, from a physical point of view the Eocene was merely 5 percent warmer than today, as measured on an absolute temperature scale. 
-On this background it makes intuitive sense to think that Earth's climate is stable to small perturbations. The system did not venture to completely different states and it did spend enough time to equilibrate at almost any temperature within the range visited since dinosaurs ruled the Earth 65 million years ago (Figure \ref{fig:Paleo_temperature_timeseries}). We shall return to time-scales in the next chapter. 
-
-For a stationary state to be stable to small perturbations there must be some restoring force that if the system finds itself a bit away from stationarity, then that force will act to move the system back towards the fix-point. 
-
-\begin{equation}
-N = \frac{S_o}{4}(1-\alpha) - \epsilon \sigma T_s^4,
-\end{equation}
+In one perspective the Earth's climate has varied in rich ways in the past, in another perspective it has been remarkably stable (Figure \ref{fig:Paleo_temperature_timeseries}). The past 6.000 years we have had nearly steady temperatures, a period called the Holocene. These relatively mild conditions, wherein modern human civilization developed, have been rare in the past 1.000.000 years wherein the climate has cycled between longer colder glacial interrupted by short interglacials. Before that the Earth was warmer than it is today. For instance during Pliocene CO$_2$ concentrations were close to what they are today, about 400 ppm, and temperatures higher by 2-3 K. Much earlier, during the Eocene temperatures were much warmer, maybe by 10-15 K. These differences on the one hand translated into substantially different conditions for life to unfold on the planet. On the other hand, from a physical point of view the Eocene was merely 5 percent warmer than today, as measured on an absolute temperature scale. 
+On this background it makes intuitive sense to think that Earth's climate is stable to small perturbations in the context of it's known history: The system did not venture to completely different states and it did spend enough time to equilibrate at almost any temperature within the range visited since dinosaurs ruled the Earth 65 million years ago (Figure \ref{fig:Paleo_temperature_timeseries}); we shall return to estimating the time-scales for equilibrating in the next chapter. 
 
 \begin{figure}
 \begin{center}
 \includegraphics[width=17 cm]{../illustrations/Feedback_stability_cases.pdf}
 \end{center}
-\caption{ Illustration of stability cases near stationary states as marked by the black dots whereat imbalance is zero.  } 
+\caption{ Illustration of stability cases near stationary states as marked by the black dots whereat imbalance is zero. I consider all the light gray cases where $d N/ d T = 0$ at the fix-point as limiting cases. } 
 \label{fig:feedback_stability_cases}
 \end{figure}
 
+For a state to be stable it must not only have zero imbalance ($N=0$) but it must also be stable to small perturbations. The latter requires that there must be some restoring force such that if the system finds itself a bit away from stationarity, then that force will act to move the system back towards the fix-point. We can think of these perturbations as arising due to internal variability, due to weather phenomena or climate variability, or due to external forcing such as fluctuations in the solar constant or changes in atmospheric composition for reasons we consider external to the system, e.g. anthropogenic carbon dioxide emissions. For a complex system such as the Earth's climate this may be difficult to visualize as there is a practically near-infinite number of state-variables. But for many purposes we think of the climate system as having a single state-variable, the global mean surface temperature as we did it in the previous chapter, and in this case we can visualize the problem more easily (Figure \ref{fig:feedback_stability_cases}). We can think of all the other state variables as being functions of the global mean temperature. Suppose $T_o$ is a fixed-point at which the imbalance is zero and that in {\em some region} above and below $T_o$ the imbalance, $N$, is a continuous and differentiable function of $T$. Then for cases wherein $dN/dT \ne 0$ the fix-points are either stable if $dN/dT < 0$ and unstable if $dN/dT > 0$ where the derivative is calculated at $T_o$. These two possibilities are displayed as black lines in cases a and c in Figure \ref{fig:feedback_stability_cases}. We shall refer to $dN/dT$ as the feedback parameter ($\lambda$), and the above summarizes that for cases whereat $N(T_o) = 0$ the stability is determined as follows:
+\begin{eqnarray}
+\lambda(T_o) < 0&:& T_o \textrm{ is a stable fix-point} \nonumber \\  
+\lambda(T_o) > 0&:& T_o \textrm{ is an unstable fix-point} \nonumber
+\end{eqnarray}
+which is the take-home message of this section.
+
+We talked above about stability in {\em some region} around a fix-point, but what does that mean? How large does the region have to be? It depends on how large the perturbations considered to be relevant are, if there is a faint risk of approaching another fix-point. If a stable and an unstable fix-point exists in immediate vicinity, such as shown by the dashed line in Figure \ref{fig:feedback_stability_cases}, then the stable solution is only stable to small perturbations. If it is pushed hard to temperatures above those of the unstable fix-point, then it will not return to the stable fix-point, but instead continue to warm because there $N>0$. Eventually, then system may then encounter another stable fix-point and settle in at warmer temperatures. 
+
+In the rare limiting cases wherein both $N=0$ and $dN/dT = 0$ at the fix point things get a bit more complicated. In this case it makes sense to evaluate $N$ on either side of the fix point. If $N>0$ at somewhat colder $T$ and $N<0$ at slightly warmer $T$ then the system is stable to small perturbations, as illustrated for the gray case a in Figure \ref{fig:feedback_stability_cases}. The same argument can be used for the limiting unstable case, c. In the marginally stable cases (b) wherein $N$ has the same sign on either side of the fix-point the system is stable to perturbations in one direction and unstable to perturbations in the other direction. Think of yourself as standing on a small plateau on the side of a slippery cliff. If you try to climb up the mountain you will slide back towards the plateau (stable), but if you move a bit in the other direction you fall off the cliff and never get back to your starting point (unstable). Marginally stable fix-points occur when a system undergoes so-called bifurcations, a topic we shall return to in a later chapter.
+
+Now let us be more concrete in applying the stability criterion we derived above. We will start with a version of the energy balance equation that you developed in an exercise of the previous chapter. In this case the greenhouse effect is represented by an effective emissivity, $\epsilon$, which is less than or equal to unity:
+\begin{equation}
+N = \frac{S_o}{4}(1-\alpha) - \epsilon \sigma T_s^4,
+\end{equation}
+from which we can estimate the feedback parameter by taking the derivative yielding:
+\begin{equation}
+\lambda = -\frac{S_o}{4}\frac{d\alpha}{dT_s} - \sigma T_s^4 \frac{d\epsilon}{dT_s} - 4 \epsilon \sigma T_s^3,
+\label{eq:lambda_general}
+\end{equation}
+in the general case where $\epsilon$ and $\alpha$ are dependent on temperature. We can think of the first term as shortwave feedback which arises due to changes in planetary albedo. The origin of such feedbacks could be changes in surface albedo, e.g. through the melting of bright snow and ice, or through changes in the cloudiness. The two other terms are infrared or longwave feedbacks. The middle term encapsulates changes in the Earth's emissivity with temperature, as we shall see e.g. due to increasing water vapor and rising upper-level clouds with warming. The last term is what is often referred to as the Planck feedback.
+
+If we consider a system with constant $\epsilon$ and $\alpha$ then the only term remaining is the Planck feedback for which we have:
+\begin{equation}
+\lambda_P = - 4 \epsilon \sigma T_s^3 < 0 
+\end{equation}
+for all $T_s$ implying that this system is unconditionally stable. If we insert numbers typical for the Earth we obtain obtain $\lambda_p \approx$ -3.25 Wm$^{-2}$K$^{-1}$ which is surprisingly close to the value obtained from complex climate models. The second term on the right hand side of equation \ref{eq:lambda_general}, which is broadly to be thought of as water vapor feedback, is found in climate models to be about +1 Wm$^{-2}$K$^{-1}$ (we shall refine this below), and so is not sufficient to cause instability in current climates. In warmer climates the positive water vapor feedback is thought to increase faster than the negative Planck feedback and so could aid in destabilising the system. It is left as an exercise to estimate the criterion for instability when considering planetary albedo feedback.
 
 \section{Feedback mechanisms}
+Above we calculated the feedback parameter for the general case (Eq. \ref{eq:lambda_general}) and identified three terms, one related to how planetary albedo changes with temperature one related to how the effective emissivity changes and one which is directly related to the Planck feedback. Now, if we want to go about understanding and quantifying the feedback it is more convenient to make another division. For instance the planetary albedo is controlled by changes in surface albedo, cloudiness and water vapor, as well as some other factors such as aerosol particles and ozone that we shall ignore here as feedbacks. 
+As a first step let us divide $\lambda$ into contributions due to changes in temperature, water vapor, surface albedo and clouds:
+\begin{equation}
+\lambda =  \lambda_T + \lambda_W + \lambda_A + \lambda_C + ...
+\end{equation}
+where there are a number of additional terms due to interactions between e.g. clouds and water vapor changes as well as other factors that we have ignored (aerosols, ozone etc.). As long as we consider relatively small perturbations  then the interactions between feedbacks are of secondary importance. For large perturbations, however, it is easy to appreciate that this will no longer be the case. For instance cloudiness tends to increase in a warming climate, and so a decreasing surface albedo will have less of an impact on the energy imbalance than in a colder case. Or if the vertical temperature structure is substantially altered due to a rising tropopause, then the impacts of clouds and water vapor changes on the greenhouse effect may be different.
+
+It turns out to be meaningful to divide the temperature feedback parameter into two contributions. 
+\begin{equation}
+\lambda_T \approx \lambda_P + \lambda_{LR}
+\end{equation}
+
+
+Complex climate models agree broadly on the importance of these feedback mechanisms, although the strengths of feedback parameters are model dependent. Table \ref{table:feedbacks} shows a dozen examples from some of the models that participated in the latest Coupled Model Intercomparison Project (CMIP5). In particular the cloud feedback parameter varies substantially among models.
+
+\begin{table}
+  \caption{ Overview of feedback parameter strength in some climate models as diagnosed using the radiative kernel method. This is a subset of the analysis from Vial et al. (2013). }
+  \vspace{0.5 cm}
+  \centering
+  \begin{tabular}{l|rrrrrr} 
+    Model                 & $\lambda_P$ & $\lambda_{LR}$ & $\lambda_W$ & $\lambda_{W+LR}$ & $\lambda_A$ & $\lambda_C$ \\
+    \hline
+    IPSL-CM5A-LR  & -3.29 & -0.97 & 1.86 & 0.89 & 0.18 & 1.18 \\
+    NorESM1-M       & -3.19 & -0.47 & 1.54 & 1.07 & 0.30 & 0.14 \\
+    MPI-ESM-LR      & -3.27 & -0.88 & 1.76 & 0.89 & 0.29 & 0.45 \\
+    INMCM4             & -3.24 & -0.67 & 1.62 & 0.95 & 0.33 & -0.05 \\
+    HadGEM2          & -3.18 & -0.55 & 1.49 & 0.94 & 0.29 & 0.39 \\
+    CanESM2          & -3.23 & -0.64 & 1.67 & 1.03 & 0.32 & 0.52 \\
+    MIROC5             & -3.22 & -0.66 & 1.68 & 1.02 & 0.36 & 0.04 \\
+    CCSM4              & -3.18 & -0.44 & 1.48 & 1.05 & 0.40 & -0.42 \\
+    BNU-ESM          & -3.15 & -0.22 & 1.39 & 1.17 & 0.48 & 0.09 \\
+    FGOALS-s2       & -3.20 & -0.53 & 1.73 & 1.20 & 0.37 & -0.10 \\
+    MRI-CGCM3      & -3.22 & -0.61 & 1.53 & 0.92 & 0.37 & 0.21 \\
+    \hline
+    Ensemble mean      & -3.22 & -0.60 & 1.61 & 1.01 & 0.34 & 0.22 \\
+    Standard deviation  & 0.04 & 0.21 & 0.14 & 0.11 & 0.08 & 0.42 \\
+  \end{tabular}
+  \label{table:feedbacks}
+\end{table}
+
 \subsection{Surface albedo feedback}
+
+
 \subsection{Water vapor feedback}
+
+\begin{eqnarray}
+\frac{de_s}{dT} &=& \frac{L_v e_s}{R_v T^2}, \nonumber \\
+\frac{d\ln e_s}{dT} &=& \frac{L_v}{R_v T^2}
+\label{eq:clausius_clapeyron}
+\end{eqnarray}
+
+
 \subsection{Cloud feedbacks}
 
-\section{Radiative kernels?}
+
+
+
+
+
+\section{Equilibrium climate sensitivity (ECS)}
+
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=8 cm]{../external_figures/Feedback_vs_ECS.pdf}
+\end{center}
+\caption{ Relationship between feedback and equilibrium climate sensitivity to one doubling of CO$_2$, ie. a forcing of 3.7 Wm$^{-2}$. Gray dots show individual CMIP5 climate models, and the dashed line indicates the case with only Planck feedback ($\lambda=\lambda_P$). } 
+\label{fig:feedback_vs_ECS}
+\end{figure}
+
+
+
+
+\vspace{1 cm}
+{\setlength{\parindent}{0cm}
+\hrule
+\begin{exercise}
+Estimate the limit of instability for planetary albedo feedbacks using equation \ref{eq:lambda_general}. First assume $\epsilon$ is a constant. Put in numbers relevant for Earth to estimate how fast planetary albedo would have to decrease to alone cause instability.  
+\end{exercise}
+
+\begin{exercise}
+Use the online MODTRAN radiative transfer model to estimate water vapor feedback. Do so by changing the 'Water Vapor Scale' from, say, 1.00 to 1.07, corresponding to a 7 percent increase of specific humidity which is roughly what occurs for a 1 K warming at typical tropospheric temperatures. Another way to do this is to use the 'Ground T offset', which actually increases the temperature of the whole column, then compare the cases with constant vapor pressure and relative humidity. It is convenient to use the 'Save this run to background' button.
+
+How does the water vapor feedback depend on locality? How does your estimate compare with that of complex climate models?
+\end{exercise}
+
+
+
+}
+
 
 %---------------------------------------------------------------------
 \chapter{Temporal evolution}
@@ -460,10 +570,10 @@ N = \frac{S_o}{4}(1-\alpha) - \epsilon \sigma T_s^4,
 \section{Sea-level rise}
 
 %---------------------------------------------------------------------
-\chapter{Historical warming}
+\chapter{Forcing and adjustments}
 
 %---------------------------------------------------------------------
-\chapter{Forcing and adjustments}
+\chapter{Historical warming}
 
 %---------------------------------------------------------------------
 \chapter{Time- and state-dependent feedback}
@@ -480,6 +590,12 @@ N = \frac{S_o}{4}(1-\alpha) - \epsilon \sigma T_s^4,
 
 
 \section{Attribution of historical warming}
+
+
+\section{MODTRAN exercise}
+
+
+\section{Modeling natural variability}
 
 
 \section{Treating volcanoes in historical simulations}
