--- a/Course_notes_latex/bibliography.bib
+++ b/Course_notes_latex/bibliography.bib
@@ -1,6 +1,70 @@
 %% Created using Papers on Thu, 10 Nov 2016.
 %% http://papersapp.com/papers/
 
+
+@article{Pithan2014,
+author = {Pithan, Felix and Mauritsen, Thorsten},
+title = {Arctic amplification dominated by temperature feedbacks in contemporary climate models},
+journal = {Nature Geoscience},
+volume = {7},
+pages = {181-184},
+doi = {10.1038/ngeo2071},
+year = {2014},
+}
+
+
+@article{Held2012,
+author = {Isaac M. Held and Karen M. Shell},
+title = {Using Relative Humidity as a State Variable in Climate Feedback Analysis},
+journal = {Journal of Climate},
+volume = {25},
+number = {8},
+pages = {2578-2582},
+year = {2012},
+doi = {10.1175/JCLI-D-11-00721.1},
+}
+
+
+@article{Mauritsen2015,
+author = {Mauritsen, Thorsten and Stevens, Bjorn},
+title = {Missing iris effect as a possible cause of muted hydrological change and high climate sensitivity in models},
+journal = {Nature Geoscience},
+volume = {8},
+pages = {346-251},
+doi = {10.1038/ngeo2414},
+year = {2015},
+}
+
+
+@article{Block2013,
+  author = {Block, K. and Mauritsen, T.},
+  year = {2013},
+  title = {Forcing and feedback in the MPI-ÄêESM-êLR coupled model under abruptly quadrupled CO2},
+  journal = {Journal of Advances in Modeling Earth Systems},
+  publisher = {Wiley Online Library},
+  issn = {1942-2466},
+  doi = {10.1002/jame.20041},
+  volume = {5},
+  month = {12},
+  pages = {676--691},
+  number = {4},
+}
+
+@Article{Vial2013,
+author="Vial, Jessica
+and Dufresne, Jean-Louis
+and Bony, Sandrine",
+title={On the interpretation of inter-model spread in CMIP5 climate sensitivity estimates},
+journal="Climate Dynamics",
+year="2013",
+volume="41",
+number="11",
+pages="3339--3362",
+doi="10.1007/s00382-013-1725-9",
+url="http://dx.doi.org/10.1007/s00382-013-1725-9"
+}
+
+
 @article{Pierrehumbert2004,
 author = {Pierrehumbert, Raymond T.},
 title = {Warming the world},
